* update ortp to 5.0.66-1

--- a/ortp/PKGBUILD
+++ b/ortp/PKGBUILD
@@ -5,16 +5,16 @@
 # Contributor: William Rea <sillywilly@gmail.com>
 
 pkgname=ortp
-pkgver=5.0.32
+pkgver=5.0.66
 pkgrel=1
 pkgdesc='A Real-time Transport Protocol (RTP) library'
-arch=(x86_64 powerpc64le powerpc)
-url='https://github.com/BelledonneCommunications/ortp'
+arch=(x86_64 powerpc64le powerpc riscv64)
+url='https://gitlab.linphone.org/'
 license=(GPL3)
 depends=(bctoolbox)
 makedepends=(cmake doxygen)
-source=(https://github.com/BelledonneCommunications/ortp/archive/$pkgver/$pkgname-$pkgver.tar.gz)
-sha256sums=('e54371b121dda6c0f6df09c1a54009d8efc103debebb777a4f92262cbffca8af')
+source=(https://gitlab.linphone.org/BC/public/$pkgname/-/archive/$pkgver/$pkgname-$pkgver.tar.bz2)
+sha256sums=('f71c8a526281a6450a7d56fd8671aebde4e94d16df9d8ab9a45087d18e4b0650')
 
 build() {
   cmake -B build -S $pkgname-$pkgver \
