* update mediastreamer to 5.0.68-1

--- a/mediastreamer/PKGBUILD
+++ b/mediastreamer/PKGBUILD
@@ -6,17 +6,24 @@
 # Contributor: Mark Lee <mark@markelee.com>
 
 pkgname=mediastreamer
-pkgver=5.0.32
+pkgver=5.0.68
 pkgrel=1
 pkgdesc='A library written in C that allows you to create and run audio and video streams'
-arch=(x86_64 powerpc64le powerpc)
-url='https://github.com/BelledonneCommunications/mediastreamer2'
+arch=(x86_64 powerpc64le powerpc riscv64)
+url='https://gitlab.linphone.org/'
 license=(GPL)
 depends=(ortp ffmpeg bzrtp glew libsrtp)
 makedepends=(cmake python bcunit doxygen)
-source=(https://github.com/BelledonneCommunications/mediastreamer2/archive/$pkgver/$pkgname-$pkgver.tar.gz)
-sha256sums=('91308d12a30a1d04e4d396b0d76eb77ea359f0eee9715142047568502149ccfb')
+source=(https://gitlab.linphone.org/BC/public/${pkgname}2/-/archive/$pkgver/${pkgname}2-$pkgver.tar.bz2
+        ffmpeg5.patch)
+sha256sums=('4f4895b14ef7d8699647d11d8d0c2d05583c7d195b3e027b4ed141c8cc80bcad'
+            'e97e029cbbafe5245eaa6f92664224e4381eea5f45e403d5bfa6b0e5c2be0341')
 validpgpkeys=('9774BC1725758EB16D639F8B3ECD52DEE2F56985')
+
+prepare() {
+  cd ${pkgname}2-${pkgver}
+  patch -Np1 -i ${srcdir}/ffmpeg5.patch
+}
 
 build() {
   cmake -B build -S ${pkgname}2-$pkgver \
