--- a/cryptsetup/PKGBUILD
+++ b/cryptsetup/PKGBUILD
@@ -4,7 +4,7 @@
 
 pkgname=cryptsetup
 pkgver=2.4.3
-pkgrel=1
+pkgrel=2
 pkgdesc='Userspace setup tool for transparent encryption of block devices using dm-crypt'
 arch=(x86_64 powerpc64le powerpc riscv64)
 license=('GPL')
@@ -13,7 +13,7 @@ depends=('device-mapper' 'libdevmapper.so' 'openssl' 'popt' 'util-linux-libs'
          'libuuid.so' 'json-c' 'libjson-c.so' 'argon2' 'libargon2.so')
 makedepends=('util-linux')
 provides=('libcryptsetup.so')
-options=('!emptydirs')
+options=('debug' '!emptydirs')
 validpgpkeys=('2A2918243FDE46648D0686F9D9B0577BD93E98FC') # Milan Broz <gmazyland@gmail.com>
 source=("https://www.kernel.org/pub/linux/utils/cryptsetup/v${pkgver%.*}/${pkgname}-${pkgver}.tar."{xz,sign}
         'hooks-encrypt'
