* update libxkbcommon to 1.4.0-1

--- a/xorg/libxkbcommon/PKGBUILD
+++ b/xorg/libxkbcommon/PKGBUILD
@@ -4,17 +4,17 @@
 # Contributor: Mladen Pejakovic <pejakm@gmail.com>
 
 pkgbase=libxkbcommon
-pkgname=(libxkbcommon libxkbcommon-x11)
-pkgver=1.3.1
+pkgname=(libxkbcommon libxkbcommon-doc libxkbcommon-x11)
+pkgver=1.4.0
 pkgrel=1
 pkgdesc="Keymap handling library for toolkits and window systems"
 url="https://xkbcommon.org/"
 arch=(x86_64 powerpc64le powerpc riscv64)
 license=(custom)
-makedepends=(xkeyboard-config libxml2 libxcb wayland wayland-protocols
+makedepends=(xkeyboard-config libxml2 libxcb wayland wayland-protocols doxygen
              git meson xorgproto)
 checkdepends=(xorg-server-xvfb libgl)
-_commit=88222c8d40543c29af781f7d7e25d202ff40e4b7  # tags/xkbcommon-1.3.1^0
+_commit=ea6580cc3913d93655ecf92a5913de652315efc3  # tags/xkbcommon-1.4.0^0
 source=("git+https://github.com/xkbcommon/libxkbcommon#commit=$_commit")
 sha256sums=('SKIP')
 
@@ -28,7 +28,7 @@ prepare() {
 }
 
 build() {
-  arch-meson $pkgbase build -D enable-docs=false
+  arch-meson $pkgbase build
   meson compile -C build
 }
 
@@ -55,7 +55,7 @@ package_libxkbcommon() {
   meson install -C build --destdir "$pkgdir"
   install -Dt "$pkgdir/usr/share/licenses/$pkgname" -m644 $pkgbase/LICENSE
 
-  #_pick libxkbcommon-doc "$pkgdir"/usr/share/doc
+  _pick libxkbcommon-doc "$pkgdir"/usr/share/doc
 
   _pick libxkbcommon-x11 "$pkgdir"/usr/lib/*x11*
   _pick libxkbcommon-x11 "$pkgdir"/usr/lib/pkgconfig/*x11*
