--- a/p11-kit/PKGBUILD
+++ b/p11-kit/PKGBUILD
@@ -4,16 +4,15 @@
 
 pkgbase=p11-kit
 pkgname=(p11-kit libp11-kit)
-pkgver=0.24.0
-pkgrel=2
+pkgver=0.24.1
+pkgrel=1
 pkgdesc="Loads and enumerates PKCS#11 modules"
 url="https://p11-glue.freedesktop.org"
 arch=(x86_64 powerpc64le powerpc riscv64)
 license=(BSD)
-#makedepends=(gtk-doc meson libtasn1 libffi systemd bash-completion)
-makedepends=(docbook-xsl meson libtasn1 libffi bash-completion)
+makedepends=(gtk-doc meson libtasn1 libffi systemd bash-completion)
 source=(https://github.com/p11-glue/p11-kit/releases/download/$pkgver/p11-kit-$pkgver.tar.xz{,.sig})
-sha256sums=('81e6140584f635e4e956a1b93a32239acf3811ff5b2d3a5c6094e94e99d2c685'
+sha256sums=('d8be783efd5cd4ae534cee4132338e3f40f182c3205d23b200094ec85faaaef8'
             'SKIP')
 validpgpkeys=('C0F67099B808FB063E2C81117BFB1108D92765AF'  # Stef Walter
               '462225C3B46F34879FC8496CD605848ED7E69871') # Daiki Ueno
@@ -24,8 +23,7 @@ prepare() {
 
 build() {
   arch-meson p11-kit-$pkgver build \
-    --buildtype debugoptimized \
-    -D gtk_doc=false \
+    -D gtk_doc=true \
     -D man=true \
     -D trust_paths=/etc/ca-certificates/trust-source:/usr/share/ca-certificates/trust-source
   meson compile -C build
@@ -46,7 +44,7 @@ _pick() {
 }
 
 package_p11-kit() {
-  depends=("libp11-kit=$pkgver-$pkgrel" coreutils libp11-kit.so)
+  depends=("libp11-kit=$pkgver-$pkgrel" coreutils libp11-kit.so libsystemd.so)
   install=p11-kit.install
 
   meson install -C build --destdir "$pkgdir"
@@ -71,4 +69,4 @@ package_libp11-kit() {
   install -Dt "$pkgdir/usr/share/licenses/$pkgname" -m644 p11-kit-$pkgver/COPYING
 }
 
-# vim:set ts=2 sw=2 et:
+# vim:set sw=2 et:
