--- a/lcms2/PKGBUILD
+++ b/lcms2/PKGBUILD
@@ -2,7 +2,7 @@
 # Maintainer: Eric Bélanger <eric@archlinux.org>
 
 pkgname=lcms2
-pkgver=2.12
+pkgver=2.13.1
 pkgrel=1
 pkgdesc='Small-footprint color management engine, version 2'
 arch=(x86_64 powerpc64le powerpc riscv64)
@@ -10,11 +10,11 @@ url='http://www.littlecms.com/'
 license=('MIT')
 depends=('libtiff')
 provides=('liblcms2.so')
-source=("https://github.com/mm2/Little-CMS/archive/${pkgver}/${pkgname}-${pkgver}.tar.gz")
-sha256sums=('e501f1482fc424550ef3abbf86bf1c66090e1661249e89552d39ed5bf935df66')
+source=("https://github.com/mm2/Little-CMS/releases/download/lcms${pkgver}/${pkgname}-${pkgver}.tar.gz")
+sha256sums=('d473e796e7b27c5af01bd6d1552d42b45b43457e7182ce9903f38bb748203b88')
 
 build() {
-  cd Little-CMS-${pkgver}
+  cd "${pkgname}-${pkgver}"
 
   ./configure \
     --prefix=/usr \
@@ -23,13 +23,13 @@ build() {
 }
 
 check() {
-  cd Little-CMS-${pkgver}
+  cd "${pkgname}-${pkgver}"
 
   make check
 }
 
 package() {
-  cd Little-CMS-${pkgver}
+  cd "${pkgname}-${pkgver}"
 
   make DESTDIR="${pkgdir}" install
   install -D -m0644 COPYING "${pkgdir}/usr/share/licenses/${pkgname}/LICENSE"
