--- a/jbigkit/PKGBUILD
+++ b/jbigkit/PKGBUILD
@@ -5,12 +5,12 @@
 
 pkgname=jbigkit
 pkgver=2.1
-pkgrel=5
+pkgrel=6
 pkgdesc="Data compression library/utilities for bi-level high-resolution images"
 arch=(x86_64 powerpc64le powerpc riscv64)
-url="http://www.cl.cam.ac.uk/~mgk25/jbigkit/"
+url="https://www.cl.cam.ac.uk/~mgk25/jbigkit/"
 license=('GPL')
-depends=('glibc')
+depends=()
 options=('staticlibs')
 source=(https://www.cl.cam.ac.uk/~mgk25/download/jbigkit-$pkgver.tar.gz)
 sha256sums=('de7106b6bfaf495d6865c7dd7ac6ca1381bd12e0d81405ea81e7f2167263d932')
