--- a/libjxl/PKGBUILD
+++ b/libjxl/PKGBUILD
@@ -4,9 +4,9 @@
 pkgbase=libjxl
 pkgname=('libjxl' 'libjxl-doc')
 pkgver=0.6.1
-pkgrel=1
+pkgrel=2
 pkgdesc='JPEG XL image format reference implementation'
-arch=(x86_64 powerpc64le powerpc)
+arch=(x86_64 powerpc64le powerpc riscv64)
 url='https://jpeg.org/jpegxl/'
 license=('BSD')
 makedepends=('git' 'cmake' 'clang' 'brotli' 'gdk-pixbuf2' 'giflib'
@@ -14,6 +14,7 @@ makedepends=('git' 'cmake' 'clang' 'brotli' 'gdk-pixbuf2' 'giflib'
              'java-environment' 'python' 'asciidoc' 'doxygen' 'graphviz'
              'xdg-utils' 'highway')
 makedepends_x86_64=('gimp')
+options=('!lto')
 source=("git+https://github.com/libjxl/libjxl.git#tag=v${pkgver}"
         'git+https://github.com/google/brotli.git'
         'git+https://github.com/lvandeve/lodepng.git'
