--- a/imagemagick/PKGBUILD
+++ b/imagemagick/PKGBUILD
@@ -4,11 +4,11 @@
 
 pkgbase=imagemagick
 pkgname=(imagemagick imagemagick-doc)
-pkgver=7.1.0.14
+pkgver=7.1.0.23
 pkgrel=1
 pkgdesc='An image viewing/manipulation program'
 url='https://www.imagemagick.org/'
-arch=(x86_64 powerpc64le powerpc)
+arch=(x86_64 powerpc64le powerpc riscv64)
 license=(custom)
 makedepends=(ghostscript openexr libwmf librsvg libxml2 openjpeg2 libraw opencl-headers libwebp libzip libjxl highway
              chrpath ocl-icd glu ghostpcl ghostxps libheif jbigkit lcms2 libxext liblqr libraqm libpng djvulibre)
@@ -17,7 +17,7 @@ _relname=ImageMagick-${pkgver%%.*}
 _tarname=ImageMagick-${pkgver%.*}-${pkgver##*.}
 source=(https://download.imagemagick.org/ImageMagick/download/releases/$_tarname.tar.xz{,.asc}
         arch-fonts.diff)
-sha256sums=('8f08592b759eb8ff948814d4329fab2004042c5f4bd185315b066aca76f69f76'
+sha256sums=('7a0d8b4bab482fb52dd585d30060b7a6ab2427fd305b6aa545b5c2f62431ff6b'
             'SKIP'
             'a85b744c61b1b563743ecb7c7adad999d7ed9a8af816650e3ab9321b2b102e73')
 validpgpkeys=(D8272EF51DA223E4D05B466989AB63D48277377A)  # Lexie Parsimoniae
@@ -86,6 +86,7 @@ package_imagemagick() {
               'libwebp: WEBP support'
               'libwmf: WMF support'
               'libxml2: Magick Scripting Language'
+              'libzip: OpenRaster support'
               'ocl-icd: OpenCL support'
               'openexr: OpenEXR support'
               'openjpeg2: JPEG2000 support'
@@ -109,9 +110,6 @@ package_imagemagick() {
 
 # Split docs
   mv "$pkgdir/usr/share/doc" "$srcdir/docpkg/usr/share/"
-
-# Harden security policy https://bugs.archlinux.org/task/62785
-  sed -e '/<\/policymap>/i \ \ <policy domain="delegate" rights="none" pattern="gs" \/>' -i "$pkgdir"/etc/ImageMagick-7/policy.xml
 }
 
 package_imagemagick-doc() {
