--- a/linux-ppc64/config
+++ b/linux-ppc64/config
@@ -1,8 +1,8 @@
 #
 # Automatically generated file; DO NOT EDIT.
-# Linux/powerpc 5.16.0-arch1 Kernel Configuration
+# Linux/powerpc 5.16.8-arch1 Kernel Configuration
 #
-CONFIG_CC_VERSION_TEXT="powerpc64-linux-gnu-gcc (GCC) 11.2.0"
+CONFIG_CC_VERSION_TEXT="gcc (Arch POWER) 11.2.0"
 CONFIG_CC_IS_GCC=y
 CONFIG_GCC_VERSION=110200
 CONFIG_CLANG_VERSION=0
@@ -1941,7 +1941,7 @@ CONFIG_FW_LOADER_PAGED_BUF=y
 CONFIG_EXTRA_FIRMWARE=""
 CONFIG_FW_LOADER_USER_HELPER=y
 # CONFIG_FW_LOADER_USER_HELPER_FALLBACK is not set
-# CONFIG_FW_LOADER_COMPRESS is not set
+CONFIG_FW_LOADER_COMPRESS=y
 CONFIG_FW_CACHE=y
 # end of Firmware loader
 
@@ -6150,6 +6150,7 @@ CONFIG_DUMMY_CONSOLE=y
 CONFIG_DUMMY_CONSOLE_COLUMNS=80
 CONFIG_DUMMY_CONSOLE_ROWS=25
 CONFIG_FRAMEBUFFER_CONSOLE=y
+# CONFIG_FRAMEBUFFER_CONSOLE_LEGACY_ACCELERATION is not set
 CONFIG_FRAMEBUFFER_CONSOLE_DETECT_PRIMARY=y
 CONFIG_FRAMEBUFFER_CONSOLE_ROTATION=y
 CONFIG_FRAMEBUFFER_CONSOLE_DEFERRED_TAKEOVER=y
