* update polkit to 0.120-4

--- a/polkit/PKGBUILD
+++ b/polkit/PKGBUILD
@@ -4,10 +4,9 @@
 
 pkgname=polkit
 pkgver=0.120
-pkgrel=3
+pkgrel=4
 pkgdesc="Application development toolkit for controlling system-wide privileges"
 arch=(x86_64 powerpc64le powerpc riscv64)
-arch=(powerpc)
 license=(LGPL)
 url="https://www.freedesktop.org/wiki/Software/polkit/"
 depends=(glib2 pam expat systemd js78)
@@ -16,9 +15,9 @@ checkdepends=(python-dbusmock)
 backup=(etc/pam.d/polkit-1)
 _commit=92b910ce2273daf6a76038f6bd764fa6958d4e8e  # tags/0.120
 source=("git+https://gitlab.freedesktop.org/polkit/polkit.git#commit=$_commit"
-        polkit-0.120-meson.patch)
+        meson-0.61.diff)
 sha256sums=('SKIP'
-            '9a84b59d38b3f86c70c5fc3a28cbfe8d7a22cf190eb20ff433f7f53f5ff73a9a')
+            '45d08bbb76e1e22ca8e698df04652b7aceaded34f9b76ce6b68152fb26b0de8d')
 
 pkgver() {
   cd polkit
@@ -27,7 +26,12 @@ pkgver() {
 
 prepare() {
   cd polkit
-  patch -Np1 -i ${srcdir}/polkit-0.120-meson.patch
+
+  # CVE-2021-4034
+  git cherry-pick -n a2bf5c9c83b6ae46cbd5c779d3055bff81ded683
+
+  # Fix build with Meson 0.61.0
+  git apply -3 ../meson-0.61.diff
 }
 
 build() {
