--- a/ppp/PKGBUILD
+++ b/ppp/PKGBUILD
@@ -6,7 +6,7 @@ pkgname=ppp
 pkgver=2.4.9
 pkgrel=1
 pkgdesc="A daemon which implements the Point-to-Point Protocol for dial-up networking"
-arch=(x86_64 powerpc64le powerpc)
+arch=(x86_64 powerpc64le powerpc riscv64)
 url="https://www.samba.org/ppp/"
 license=('GPL' 'BSD')
 depends=('glibc' 'libpcap' 'libxcrypt' 'openssl')
