* update libqmi to 1.30.2-1

--- a/libqmi/PKGBUILD
+++ b/libqmi/PKGBUILD
@@ -5,7 +5,7 @@ pkgname=libqmi
 pkgver=1.30.2
 pkgrel=1
 pkgdesc="QMI modem protocol helper library"
-arch=(x86_64 powerpc64le powerpc)
+arch=(x86_64 powerpc64le powerpc riscv64)
 url="https://www.freedesktop.org/wiki/Software/libqmi/"
 license=(GPL2)
 depends=(libmbim libqrtr-glib libgudev)
