* update modemmanager to 1.18.4+1+g780b1478-1

--- a/modemmanager/PKGBUILD
+++ b/modemmanager/PKGBUILD
@@ -4,19 +4,21 @@
 
 pkgbase=modemmanager
 pkgname=(modemmanager libmm-glib)
-pkgver=1.18.2
+pkgver=1.18.4+1+g780b1478
 pkgrel=1
 pkgdesc="Mobile broadband modem management service"
-arch=(x86_64 powerpc64le powerpc)
+arch=(x86_64 powerpc64le powerpc riscv64)
 url="https://www.freedesktop.org/wiki/Software/ModemManager/"
 license=(GPL2 LGPL2.1)
 depends=(systemd libgudev polkit ppp libqmi libmbim
          mobile-broadband-provider-info)
 makedepends=(gtk-doc gobject-introspection vala meson git bash-completion)
 checkdepends=(python-gobject python-dbus)
-_commit=5a2c9229411fa6c5905b61e777122a9b49809134  # tags/1.18.2
-source=("git+https://gitlab.freedesktop.org/mobile-broadband/ModemManager.git#commit=$_commit")
-sha256sums=('SKIP')
+_commit=ac6d31e463168e894269d2a7c949de4577026eea  # tags/1.18.4
+source=("git+https://gitlab.freedesktop.org/mobile-broadband/ModemManager.git#commit=$_commit"
+        meson-0.61.patch)
+sha256sums=('SKIP'
+            '6cc136c1fd5882248ee1aeda64d91265c115718c9e41a9f4b44c2388e7cef9ed')
 
 pkgver() {
   cd ModemManager
@@ -25,15 +27,19 @@ pkgver() {
 
 prepare() {
   cd ModemManager
+  # Meson 0.61 fixes
+  git cherry-pick -n 0ab9fc343fdc21235bc24c80c78a13b1ea078208
+  patch -Np1 -i ${srcdir}/meson-0.61.patch
 }
 
 build() {
   local meson_args=(
     -D dbus_policy_dir=/usr/share/dbus-1/system.d
-    -D polkit=permissive
     -D dist_version="\"$pkgver-$pkgrel\""
-    -D vapi=true
     -D gtk_doc=true
+    -D plugin_qcom_soc=disabled
+    -D polkit=permissive
+    -D vapi=true
   )
 
   arch-meson ModemManager build "${meson_args[@]}"
