* update iwd to 1.24-2

--- a/iwd/PKGBUILD
+++ b/iwd/PKGBUILD
@@ -4,17 +4,18 @@
 # Contributor: AndyRTR <andyrtr at archlinux.org>
 
 pkgname=iwd
-pkgver=1.18
-pkgrel=1
+pkgver=1.24
+pkgrel=2
 pkgdesc='Internet Wireless Daemon'
-arch=(x86_64 powerpc64le powerpc)
+arch=(x86_64 powerpc64le powerpc riscv64)
 url='https://git.kernel.org/cgit/network/wireless/iwd.git/'
 license=('LGPL')
 depends=('glibc' 'readline' 'libreadline.so' 'ell')
 makedepends=('python-docutils' 'dbus' 'systemd')
+options=('debug')
 source=("https://www.kernel.org/pub/linux/network/wireless/iwd-${pkgver}.tar"{.xz,.sign})
 # https://mirrors.edge.kernel.org/pub/linux/network/wireless/sha256sums.asc
-sha256sums=('0225ab81579f027e0fcbf255517f432fcf355d14f3645c36813c71a441dfab55'
+sha256sums=('61b5e48380cd3a6d0529f725eb6974157f1410af165f5d266b87add0bf395224'
             'SKIP')
 validpgpkeys=('E932D120BC2AEC444E558F0106CA9F5D1DCF2659')
 changelog=ChangeLog
