--- a/libmaxminddb/PKGBUILD
+++ b/libmaxminddb/PKGBUILD
@@ -8,8 +8,7 @@ pkgver=1.6.0
 pkgrel=1
 pkgdesc="MaxMind GeoIP2 database - split package with library and utilities"
 license=('Apache')
-arch=(x86_64 powerpc64le powerpc)
-arch=(riscv64)
+arch=(x86_64 powerpc64le powerpc riscv64)
 url="https://dev.maxmind.com/geoip/geoip2/downloadable/"
 optdepends=('geoip2-database: IP geolocation databases')
 source=("https://github.com/maxmind/libmaxminddb/releases/download/$pkgver/libmaxminddb-$pkgver.tar.gz")
