* add bind for riscv64

--- a/bind/PKGBUILD
+++ b/bind/PKGBUILD
@@ -11,7 +11,7 @@ pkgrel=1
 pkgdesc='A complete, highly portable implementation of the DNS protocol'
 url='https://www.isc.org/software/bind/'
 license=('MPL2')
-arch=(x86_64 powerpc64le powerpc)
+arch=(x86_64 powerpc64le powerpc riscv64)
 options=('!emptydirs')
 makedepends=('libcap' 'libxml2' 'zlib' 'krb5' 'e2fsprogs' 'openssl' 'readline'
   'libidn2' 'dnssec-anchors' 'python' 'json-c' 'python-ply' 'lmdb' 'zlib' 'icu'
@@ -67,6 +67,7 @@ build() {
   # compile with gcc10, https://gcc.gnu.org/gcc-10/porting_to.html
   CFLAGS+=' -fcommon'
   ./configure \
+    --build=${CHOST} \
     --prefix=/usr \
     --sysconfdir=/etc \
     --sbindir=/usr/bin \
