--- a/libndp/PKGBUILD
+++ b/libndp/PKGBUILD
@@ -6,6 +6,7 @@ pkgver=1.8
 pkgrel=1
 pkgdesc="Library for Neighbor Discovery Protocol"
 arch=(x86_64 powerpc64le powerpc)
+arch=(riscv64)
 url="http://libndp.org/"
 license=(LGPL)
 depends=(glibc)
