* update libndp to 1.8-1

--- a/libndp/PKGBUILD
+++ b/libndp/PKGBUILD
@@ -5,8 +5,7 @@ pkgname=libndp
 pkgver=1.8
 pkgrel=1
 pkgdesc="Library for Neighbor Discovery Protocol"
-arch=(x86_64 powerpc64le powerpc)
-arch=(riscv64)
+arch=(x86_64 powerpc64le powerpc riscv64)
 url="http://libndp.org/"
 license=(LGPL)
 depends=(glibc)
