--- a/elfutils/PKGBUILD
+++ b/elfutils/PKGBUILD
@@ -5,93 +5,112 @@
 # Contributor: Andrej Gelenberg <andrej.gelenberg@udo.edu>
 
 pkgbase=elfutils
-pkgname=('debuginfod' 'elfutils' 'libelf')
-pkgver=0.185
-pkgrel=1
-pkgdesc='Handle ELF object files and DWARF debugging information'
+pkgname=(debuginfod elfutils libelf)
+pkgver=0.186
+pkgrel=4
+pkgdesc="Handle ELF object files and DWARF debugging information"
 arch=(x86_64 powerpc64le powerpc riscv64)
 url="https://sourceware.org/elfutils/"
-license=('LGPL3' 'GPL3')
-makedepends=('bzip2' 'curl' 'gcc-libs' 'libarchive' 'libmicrohttpd' 'sqlite'
-'xz' 'zlib' 'zstd')
-options=('staticlibs')
+license=(LGPL3 GPL3)
+makedepends=(bzip2 curl gcc-libs libarchive libmicrohttpd sqlite xz zlib zstd)
+options=(debug staticlibs)
 source=("https://sourceware.org/${pkgbase}/ftp/${pkgver}/${pkgbase}-${pkgver}.tar.bz2"{,.sig})
-sha512sums=('34de0de1355b11740e036e0fc64f2fc063587c8eb121b19216ee5548d3f0f268d8fc3995176c47190466b9d881007cfa11a9d01e9a50e38af6119492bf8bb47f'
+sha512sums=('c9180b27ec62935f18b9431268d176f6023d1bb938731d2af6e7626ae460af6608a70ba68483aa1ec7e6cb0fa0528b661ca8b68bc4f58ea8e18af527c5950c78'
             'SKIP')
-b2sums=('57cfa7e4060975c4bf6170dbd354687a19a92f7069c060db1ac2fa4da5a9d34e8bddd07c7ce376b5c28b5670ad5b8c1df795164cbcfb600a44cf1db60c20c4af'
+b2sums=('49573d0a1f3519eab81d1ba3e94354cbc0935a36a94a3fdb22fe223a47b78cca8fd6e322870b0e335a809529fa6f54180b13c67936dec0242123c54ba20c9fc9'
         'SKIP')
 validpgpkeys=(
   '47CC0331081B8BC6D0FD4DA08370665B57816A6A'  # Mark J. Wielaard <mark@klomp.org>
   'EC3CFE88F6CA0788774F5C1D1AA44BE649DE760A'  # Mark Wielaard <mjw@gnu.org>
 )
 
+_pick() {
+  local p="$1" f d; shift
+  for f; do
+    d="$srcdir/$p/${f#$pkgdir/}"
+    mkdir -p "$(dirname "$d")"
+    mv "$f" "$d"
+    rmdir -p --ignore-fail-on-non-empty "$(dirname "$f")"
+  done
+}
+
 prepare() {
+  (
   cd "$pkgbase-$pkgver"
   autoreconf -fiv
+  )
+
+  cp -av "$pkgbase-$pkgver" "$pkgbase-test-$pkgver"
+
 }
 
 build() {
+  (
+  # fat-lto-objects is required for non-mangled .a files in libelf
+  CFLAGS+=" -ffat-lto-objects"
   cd "$pkgbase-$pkgver"
-  CFLAGS+=" -g"  # required for test-suite success
   ./configure --prefix=/usr \
               --sysconfdir=/etc \
               --program-prefix="eu-" \
               --enable-deterministic-archives
   make
+  )
+  (
+  cd "$pkgbase-test-$pkgver"
+  # debugging information is required for test-suite
+  CFLAGS+=" -g"
+  # fat-lto-objects is required for non-mangled .a files in libelf
+  CFLAGS+=" -ffat-lto-objects"
+  ./configure --prefix=/usr \
+              --sysconfdir=/etc \
+              --program-prefix="eu-" \
+              --enable-deterministic-archives
+  make
+  )
 }
 
 check() {
-  cd "$pkgbase-$pkgver"
-  # Some tests fail due to limited capabilities of build chroot
-  make check || echo "Known problem: The build environment might lack enough resources."
-}
-
-package_libelf() {
-  pkgdesc+=" (libraries)"
-  depends=('gcc-libs' 'libbz2.so' 'libcurl.so' 'xz' 'zlib' 'zstd')
-  # NOTE: the shared objects can not be added to provides as they are not versioned
-
-  cd "$pkgbase-$pkgver"
-  make DESTDIR="$pkgdir" install
-  # remove files provided by elfutils or debuginfod
-  rm -rvf "${pkgdir}"{/etc,/usr/{bin,share}}
-  install -vDm 644 {AUTHORS,ChangeLog,NEWS,NOTES,README} \
-    -t "${pkgdir}/usr/share/doc/${pkgname}"
-}
-
-package_elfutils() {
-  pkgdesc+=" (utilities)"
-  depends=('gcc-libs' 'glibc' "libelf=${pkgver}-${pkgrel}")
-
-  cd "$pkgbase-$pkgver"
-  make DESTDIR="$pkgdir" install
-  install -vDm 644 {AUTHORS,ChangeLog,NEWS,NOTES,README} \
-    -t "${pkgdir}/usr/share/doc/${pkgname}"
-  # remove files provided by libelf
-  rm -rvf "${pkgdir}/usr/"{include,lib}
-  # remove files provided by debuginfod
-  rm -rvf "${pkgdir}/usr/bin/debuginfod"* \
-    "${pkgdir}/usr/share/man/man1/debuginfod"* \
-    "${pkgdir}/usr/share/man/man3/debuginfod"* \
-    "${pkgdir}/usr/share/man/man8/" \
-    "${pkgdir}/etc"
+  cd "$pkgbase-test-$pkgver"
+  make check || printf "Fails in restrictive build environments: https://gitlab.archlinux.org/archlinux/infrastructure/-/issues/424\n"
 }
 
 package_debuginfod() {
   pkgdesc+=" (debuginfod)"
-  depends=('gcc-libs' 'glibc' 'libarchive.so' "libelf=${pkgver}-${pkgrel}"
-  'libmicrohttpd.so' 'sqlite')
-  optdepends=("elfutils=${pkgver}-${pkgrel}: for translations" )
+  depends=(gcc-libs glibc libarchive.so "libelf=${pkgver}-${pkgrel}"
+  libmicrohttpd.so sqlite)
+  optdepends=("elfutils=${pkgver}-${pkgrel}: for translations")
 
-  cd "$pkgbase-$pkgver"
-  make DESTDIR="$pkgdir" install
-  install -vDm 644 {AUTHORS,ChangeLog,NEWS,NOTES,README} \
-    -t "${pkgdir}/usr/share/doc/${pkgname}"
-  # remove files provided by libelf
-  rm -rvf "${pkgdir}/usr/"{include,lib}
-  # remove files provided by elfutils
-  rm -rvf "${pkgdir}/usr/bin/eu-"* \
-    "${pkgdir}/usr/share/man/man1/eu-"* \
-    "${pkgdir}/usr/share/man/man3/elf_"* \
-    "${pkgdir}/usr/share/locale"
+  make DESTDIR="$pkgdir" install -C "$pkgbase-$pkgver"
+  install -vDm 644 "$pkgbase-$pkgver/"{AUTHORS,ChangeLog,NEWS,NOTES,README} -t "${pkgdir}/usr/share/doc/${pkgname}"
+
+  # set the default DEBUGINFOD_URLS environment variable to the distribution's debuginfod URL
+  printf "https://debuginfod.archlinux.org\n" > "$pkgdir/etc/debuginfod/archlinux.urls"
+
+  (
+    cd "${pkgdir}"
+
+    _pick libelf usr/{include,lib}
+    _pick elfutils usr/bin/eu-*
+    _pick elfutils usr/share/locale
+    _pick elfutils usr/share/man/man1/eu-*
+    _pick elfutils usr/share/man/man3/elf_*
+  )
+
+}
+
+package_elfutils() {
+  pkgdesc+=" (utilities)"
+  depends=(gcc-libs glibc "libelf=${pkgver}-${pkgrel}")
+
+  mv -v elfutils/* "$pkgdir"
+  install -vDm 644 "$pkgbase-$pkgver"/{AUTHORS,ChangeLog,NEWS,NOTES,README} -t "${pkgdir}/usr/share/doc/${pkgname}"
+}
+
+package_libelf() {
+  pkgdesc+=" (libraries)"
+  depends=(gcc-libs libbz2.so libcurl.so xz zlib zstd)
+  # NOTE: the shared objects can not be added to provides as they are not versioned
+
+  mv -v libelf/* "$pkgdir"
+  install -vDm 644 "$pkgbase-$pkgver"/{AUTHORS,ChangeLog,NEWS,NOTES,README} -t "${pkgdir}/usr/share/doc/${pkgname}"
 }
