--- a/conmon/PKGBUILD
+++ b/conmon/PKGBUILD
@@ -3,16 +3,16 @@
 # Maintainer: Morten Linderud <foxboron@archlinux.org>
 
 pkgname=conmon
-pkgver=2.0.29
+pkgver=2.1.0
 pkgrel=1
 epoch=1
 pkgdesc='OCI container runtime monitor'
-arch=(x86_64 powerpc64le powerpc)
+arch=(x86_64 powerpc64le powerpc riscv64)
 url='https://github.com/containers/conmon'
 license=(APACHE)
 depends=(glibc glib2 systemd)
 makedepends=(git)
-_commit=7e6de6678f6ed8a18661e1d5721b81ccee293b9b	#refs/tags/v2.0.29
+_commit=bdb4f6e56cd193d40b75ffc9725d4b74a18cb33c	#refs/tags/v2.1.0
 source=("git+https://github.com/containers/conmon#commit=${_commit}")
 md5sums=('SKIP')
 
