--- a/sdl/PKGBUILD
+++ b/sdl/PKGBUILD
@@ -4,7 +4,7 @@
 # Contributor: dorphell <dorphell@archlinux.org>
 
 pkgname=sdl
-pkgver=1.2.15+387+gfbfcca32
+pkgver=1.2.15+r406+gf1caf909
 pkgrel=1
 pkgdesc="A library for portable low-level access to a video framebuffer, audio output, mouse, and keyboard"
 arch=(x86_64 powerpc64le powerpc riscv64)
@@ -15,7 +15,7 @@ makedepends=('alsa-lib' 'mesa' 'libpulse' 'glu' 'git')
 optdepends=('alsa-lib: ALSA audio driver'
             'libpulse: PulseAudio audio driver')
 options=('staticlibs')
-_commit=fbfcca3277a5f13dd78f7d44ffe2dc65d4e2d048  # main
+_commit=f1caf90987baf134acdfa6fc29d0b684b00c4989  # main
 source=("git+https://github.com/libsdl-org/SDL-1.2#commit=$_commit"
         0001-SDL-1.2.15-no-default-backing-store.patch
         0002-x11-Bypass-SetGammaRamp-when-changing-gamma.patch
@@ -30,7 +30,7 @@ validpgpkeys=('1528635D8053A57F77D1E08630A59377A7763BE6') # Sam Lantinga <slouke
 
 pkgver() {
   cd SDL-1.2
-  git describe --tags | sed 's/^release-//;s/-/+/g'
+  git describe --tags | sed 's/^release-//;s/[^-]*-g/r&/;s/-/+/g'
 }
 
 prepare() {
@@ -57,6 +57,7 @@ build() {
     ;;
   esac
 
+  CFLAGS+=' -ffat-lto-objects'
   ./configure --prefix=/usr --disable-nasm --enable-alsa --build=${CHOST} \
               --with-x --disable-rpath --disable-static $PLATFORM_CONFIGURE_FLAGS
   make
