* update libmikmod to 3.3.11.1-4

--- a/libmikmod/PKGBUILD
+++ b/libmikmod/PKGBUILD
@@ -10,7 +10,8 @@ pkgrel=4
 pkgdesc="Module player library supporting many formats, including MOD, S3M, IT and XM"
 url=http://mikmod.sourceforge.net
 license=(GPL2 LGPL2.1)
-arch=( x86_64 powerpc64le powerpc )
+arch=(x86_64 powerpc64le powerpc)
+arch=(riscv64)
 depends=(glibc libpulse sh)
 makedepends=(alsa-lib cmake)
 provides=(libmikmod.so)
