--- a/smpeg/PKGBUILD
+++ b/smpeg/PKGBUILD
@@ -6,7 +6,8 @@ pkgname=smpeg
 pkgver=0.4.5
 pkgrel=5
 pkgdesc="SDL MPEG Player Library"
-arch=( x86_64 powerpc64le powerpc )
+arch=(x86_64 powerpc64le powerpc)
+arch=(riscv64)
 url="https://icculus.org/smpeg/"
 license=(LGPL)
 depends=(sdl)
