* update sdl_mixer to 1.2.12-10

--- a/sdl_mixer/PKGBUILD
+++ b/sdl_mixer/PKGBUILD
@@ -10,6 +10,7 @@ pkgrel=10
 pkgdesc="A simple multi-channel audio mixer"
 url="https://www.libsdl.org/projects/SDL_mixer/"
 arch=(x86_64 powerpc64le powerpc)
+arch=(riscv64)
 license=(custom)
 depends=(libmikmod libvorbis sdl smpeg)
 makedepends=(fluidsynth)
