--- a/sdl_mixer/PKGBUILD
+++ b/sdl_mixer/PKGBUILD
@@ -9,8 +9,7 @@ pkgver=1.2.12
 pkgrel=10
 pkgdesc="A simple multi-channel audio mixer"
 url="https://www.libsdl.org/projects/SDL_mixer/"
-arch=(x86_64 powerpc64le powerpc)
-arch=(riscv64)
+arch=(x86_64 powerpc64le powerpc riscv64)
 license=(custom)
 depends=(libmikmod libvorbis sdl smpeg)
 makedepends=(fluidsynth)
