* add sdl_image for riscv64

--- a/sdl_image/PKGBUILD
+++ b/sdl_image/PKGBUILD
@@ -8,7 +8,7 @@ pkgver=1.2.12
 pkgrel=7
 pkgdesc="A simple library to load images of various formats as SDL surfaces"
 url="https://www.libsdl.org/projects/SDL_image/"
-arch=( x86_64 powerpc64le powerpc )
+arch=(x86_64 powerpc64le powerpc riscv64)
 license=(custom)
 depends=('sdl>=1.2.13' libpng libjpeg-turbo libtiff zlib)
 provides=('libSDL_image-1.2.so')
