--- a/sdl2_image/PKGBUILD
+++ b/sdl2_image/PKGBUILD
@@ -4,8 +4,7 @@ pkgname=sdl2_image
 pkgver=2.0.5
 pkgrel=2
 pkgdesc="A simple library to load images of various formats as SDL surfaces (Version 2)"
-arch=(x86_64 powerpc64le powerpc)
-arch=(riscv64)
+arch=(x86_64 powerpc64le powerpc riscv64)
 url="http://www.libsdl.org/projects/SDL_image"
 license=('MIT')
 depends=('sdl2' 'libpng' 'libtiff' 'libjpeg' 'libwebp')
