* update unrar to 1:6.1.4-1

--- a/unrar/PKGBUILD
+++ b/unrar/PKGBUILD
@@ -5,14 +5,14 @@
 
 pkgbase=unrar
 pkgname=(unrar libunrar)
-pkgver=6.0.7
+pkgver=6.1.4
 pkgrel=1
 epoch=1
-arch=(x86_64 powerpc64le powerpc)
+arch=(x86_64 powerpc64le powerpc riscv64)
 url='https://www.rarlab.com/rar_add.htm'
 license=(custom)
 source=(https://www.rarlab.com/rar/unrarsrc-$pkgver.tar.gz)
-sha256sums=('a7029942006cbcced3f3b7322ec197683f8e7be408972ca08099b196c038f518')
+sha256sums=('c0ed58629243961c3f1ec90c08b11ff93261e568dbfdce2bf3b759ee7a4a3b7c')
 
 prepare() {
   sed -e '/CXXFLAGS=/d' -e '/LDFLAGS=/d' -i unrar/makefile # Use system build flags
