--- a/tcsh/PKGBUILD
+++ b/tcsh/PKGBUILD
@@ -4,22 +4,22 @@
 # Contributor: Judd Vinet <jvinet@zeroflux.org>
 
 pkgname=tcsh
-pkgver=6.22.04
+pkgver=6.24.00
 pkgrel=1
 pkgdesc='Enhanced version of the Berkeley C shell.'
-arch=(x86_64 powerpc64le powerpc)
+arch=(x86_64 powerpc64le powerpc riscv64)
 url='https://www.tcsh.org/'
 license=('BSD')
 depends=('ncurses' 'libxcrypt')
 backup=('etc/csh.cshrc'
         'etc/csh.login')
 install='tcsh.install'
-source=("ftp://ftp.astron.com/pub/${pkgname}/${pkgname}-${pkgver}.tar.gz"
+source=("https://astron.com/pub/tcsh/tcsh-${pkgver}.tar.gz"
         'csh.cshrc'
         'csh.login')
-md5sums=('fa2b347fa9ae866eb036e6e4bb85fe1a'
-         '7ca0fe6d1a1b9a0093f632499d4fb112'
-         '4869b9da87c79854e2cc97241f125853')
+sha256sums=('60be2c504bd8f1fa6e424b1956495d7e7ced52a2ac94db5fd27f4b6bfc8f74f0'
+            '19093459a348fac6f7e28952cd7ebf0d7039267de7642b4f9b4b249998dd1901'
+            '0eb360906c014118b38933dabc3487d28f4cf926b8fdf89576f7be33ee79d1ba')
 
 build() {
   cd "${srcdir}/${pkgname}-${pkgver}"
@@ -39,3 +39,4 @@ package() {
   ln -s tcsh "${pkgdir}/usr/bin/csh"
   ln -s tcsh.1 "${pkgdir}/usr/share/man/man1/csh.1"
 }
+
