--- a/fuse-overlayfs/PKGBUILD
+++ b/fuse-overlayfs/PKGBUILD
@@ -4,14 +4,15 @@
 
 pkgdesc='FUSE implementation of overlayfs'
 pkgname=fuse-overlayfs
-pkgver=1.7.1
+pkgver=1.8.2
 pkgrel=1
-arch=(x86_64 powerpc64le powerpc)
+arch=(x86_64 powerpc64le powerpc riscv64)
 url=https://github.com/containers/fuse-overlayfs
 license=(GPL3)
 depends=(fuse3)
 makedepends=(git)
-_commit=0d53568a131af3f31e3609fe2ff61d0b5970a25a	#refs/tags/v1.7.1^{}
+options=(debug)
+_commit=d01bdd73b6bd1ffccaa163ef3e2660e1838305cb	#refs/tags/v1.8.2^{}
 source=("git+https://github.com/containers/fuse-overlayfs.git#commit=$_commit?signed")
 validpgpkeys=('AC404C1C0BF735C63FF4D562263D6DF2E163E1EA')
 sha512sums=('SKIP')
