--- a/iw/PKGBUILD
+++ b/iw/PKGBUILD
@@ -2,17 +2,17 @@
 # Maintainer: Thomas Bächler <thomas@archlinux.org>
 
 pkgname=iw
-pkgver=5.9
+pkgver=5.16
 pkgrel=1
 pkgdesc='nl80211 based CLI configuration utility for wireless devices'
-arch=(x86_64 powerpc64le powerpc)
+arch=(x86_64 powerpc64le powerpc riscv64)
 url='https://wireless.wiki.kernel.org/en/users/documentation/iw'
 license=('GPL')
 depends=('libnl')
 makedepends=('linux-api-headers')
 validpgpkeys=('C0EBC440F6DA091C884D8532E0F373F37BF9099A') # Johannes Berg
 source=("https://www.kernel.org/pub/software/network/$pkgname/$pkgname-$pkgver.tar."{xz,sign})
-sha256sums=('293a07109aeb7e36267cf59e3ce52857e9ffae3a6666eb8ac77894b1839fe1f2'
+sha256sums=('4c44e42762f903f9094ba5a598998c800a97a62afd6fd31ec1e0a799e308659c'
             'SKIP')
 
 build() {
