--- a/a52dec/PKGBUILD
+++ b/a52dec/PKGBUILD
@@ -9,7 +9,7 @@ pkgver=0.7.4
 pkgrel=11
 pkgdesc="A free library for decoding ATSC A/52 streams"
 url="http://liba52.sourceforge.net/"
-arch=( x86_64 powerpc64le powerpc )
+arch=(x86_64 powerpc64le powerpc riscv64)
 license=('GPL2')
 depends=('glibc')
 source=("http://liba52.sourceforge.net/files/${pkgname}-${pkgver}.tar.gz"
