--- a/sratom/PKGBUILD
+++ b/sratom/PKGBUILD
@@ -5,14 +5,14 @@
 
 pkgname=sratom
 pkgver=0.6.8
-pkgrel=1
+pkgrel=3
 pkgdesc="An LV2 Atom RDF serialisation library"
 arch=(x86_64 powerpc64le powerpc riscv64)
 url="https://drobilla.net/software/sratom/"
-license=('custom:ISC')
-depends=('glibc')
-makedepends=('lv2' 'serd' 'sord' 'waf')
-provides=('libsratom-0.so')
+license=(ISC)
+depends=(glibc lv2)
+makedepends=(serd sord waf)
+provides=(libsratom-0.so)
 source=("https://download.drobilla.net/${pkgname}-${pkgver}.tar.bz2"{,.asc})
 sha512sums=('49ec4b230a72005ab7a7a3de0bfa630a27a16f9f811ca8e7f6da7fcf6b34526577217075d428a993f95b813dd2a82a9b6892eeb2e36b66b122ada778fbb3fb95'
             'SKIP')
@@ -39,6 +39,8 @@ prepare() {
 
 build() {
   cd "${pkgname}-${pkgver}"
+
+  export LINKFLAGS="$LDFLAGS"
   waf configure --prefix=/usr \
                 --test
   waf build
@@ -51,14 +53,13 @@ check() {
 
 
 package() {
-  depends+=('libserd-0.so' 'libsord-0.so')
+  depends+=(libserd-0.so libsord-0.so)
+
   cd "${pkgname}-${pkgver}"
   waf install --destdir="${pkgdir}"
   # license
-  install -vDm 644 COPYING \
-    -t "${pkgdir}/usr/share/licenses/${pkgname}"
+  install -vDm 644 COPYING -t "${pkgdir}/usr/share/licenses/${pkgname}"
   # docs
-  install -t "${pkgdir}/usr/share/doc/${pkgname}" \
-    -vDm 644 {NEWS,README.md}
+  install -vDm 644 {NEWS,README.md} -t "${pkgdir}/usr/share/doc/${pkgname}"
 }
 # vim:set ts=2 sw=2 et:
