--- a/poppler/PKGBUILD
+++ b/poppler/PKGBUILD
@@ -4,19 +4,19 @@
 
 pkgbase=poppler
 pkgname=('poppler' 'poppler-glib' 'poppler-qt5' 'poppler-qt6')
-pkgver=22.01.0
-pkgrel=1
+pkgver=22.02.0
+pkgrel=2
 arch=(x86_64 powerpc64le powerpc riscv64)
 license=('GPL')
 makedepends=('libjpeg' 'gcc-libs' 'cairo' 'fontconfig' 'openjpeg2' 'gtk3' 'pkgconfig' 'lcms2' 
              'gobject-introspection' 'icu' 'qt5-base' 'qt6-base' 'git' 'nss' 'gtk-doc' 'curl' 'poppler-data'
              'cmake' 'python' 'boost')
-options=('!emptydirs')
+options=('!emptydirs' 'debug')
 url="https://poppler.freedesktop.org/"
 # https://gitlab.freedesktop.org/poppler/poppler
 source=(https://poppler.freedesktop.org/${pkgbase}-${pkgver}.tar.xz{,.sig}
         test::git+https://anongit.freedesktop.org/git/poppler/test/#commit=466b4e791dc02ede85898124a99024264f2290d5)
-sha256sums=('7d3493056b5b86413e5c693c2cae02c5c06cd8e618d14c2c31e2c84b67b2313e'
+sha256sums=('e390c8b806f6c9f0e35c8462033e0a738bb2460ebd660bdb8b6dca01556193e1'
             'SKIP'
             'SKIP')
 validpgpkeys=('CA262C6C83DE4D2FB28A332A3A6A4DB839EAA6D7') # "Albert Astals Cid <aacid@kde.org>"
