* update harfbuzz to 3.3.2-1

--- a/harfbuzz/PKGBUILD
+++ b/harfbuzz/PKGBUILD
@@ -4,7 +4,7 @@
 
 pkgbase=harfbuzz
 pkgname=(harfbuzz harfbuzz-icu)
-pkgver=3.2.0
+pkgver=3.3.2
 pkgrel=1
 pkgdesc="OpenType text shaping engine"
 url="https://www.freedesktop.org/wiki/Software/HarfBuzz"
@@ -13,7 +13,7 @@ license=(MIT)
 makedepends=(glib2 freetype2 graphite cairo icu gobject-introspection gtk-doc
              ragel git python meson chafa)
 checkdepends=(python-fonttools python-setuptools)
-_commit=be91d2917d9860326cb5fd1d03ffe1042a72f6d3  # tags/3.2.0^0
+_commit=ac46c3248e8b0316235943175c4d4a11c24dd4a9  # tags/3.3.2^0
 source=("git+https://github.com/harfbuzz/harfbuzz#commit=$_commit")
 sha256sums=('SKIP')
 
@@ -27,6 +27,10 @@ prepare() {
 }
 
 build() {
+  # Harfbuzz wants no exceptions
+  CFLAGS="${CFLAGS/-fexceptions/}"
+  CXXFLAGS="${CXXFLAGS/-fexceptions/}"
+
   arch-meson harfbuzz build \
     -D graphite2=enabled
   meson compile -C build
