* update gumbo-parser to 0.10.1-2.1

--- a/gumbo-parser/PKGBUILD
+++ b/gumbo-parser/PKGBUILD
@@ -3,9 +3,9 @@
 
 pkgname=gumbo-parser
 pkgver=0.10.1
-pkgrel=2
+pkgrel=2.1
 pkgdesc="HTML5 parsing library in pure C99"
-arch=(x86_64 powerpc64le)
+arch=(x86_64 powerpc64le powerpc riscv64)
 url="https://github.com/google/gumbo-parser"
 license=(Apache)
 depends=(glibc)
