* update libieee1284 to 0.2.11-13

--- a/libieee1284/PKGBUILD
+++ b/libieee1284/PKGBUILD
@@ -5,9 +5,9 @@
 pkgname=libieee1284
 pkgver=0.2.11
 _tag=${pkgver//\./_}
-pkgrel=11
+pkgrel=13
 pkgdesc="A library to query devices connected in parallel port"
-arch=(x86_64 powerpc64le powerpc)
+arch=(x86_64 powerpc64le powerpc riscv64)
 license=('GPL2')
 url="https://github.com/twaugh/libieee1284"
 optdepends=('python: for python module')
