* update squashfuse to 0.1.104-2

--- a/squashfuse/PKGBUILD
+++ b/squashfuse/PKGBUILD
@@ -6,6 +6,7 @@ pkgver=0.1.104
 pkgrel=2
 pkgdesc="FUSE filesystem to mount squashfs archives"
 arch=(x86_64 powerpc64le powerpc)
+arch=(riscv64)
 url="https://github.com/vasi/squashfuse"
 license=(custom)
 depends=(fuse zstd)
