* update libcpuid to 0.5.1-2

--- a/libcpuid/PKGBUILD
+++ b/libcpuid/PKGBUILD
@@ -1,24 +1,35 @@
 # POWER Maintainer: Alexander Baldeck <alex.bldck@gmail.com>
-# Maintainer: X0rg
+# Maintainer: George Rawlinson <grawlinson@archlinux.org>
+# Contributor: X0rg
 
 pkgname=libcpuid
-pkgver=0.5.0
-pkgrel=1
+pkgver=0.5.1
+pkgrel=2
 pkgdesc="A small C library for x86 CPU detection and feature extraction"
-arch=(x86_64 powerpc64le)
+arch=(x86_64 powerpc64le powerpc riscv64)
 url="http://libcpuid.sourceforge.net"
 license=('BSD')
 depends=('glibc')
-makedepends=('git' 'cmake' 'ninja' 'doxygen')
+makedepends=('cmake' 'ninja' 'doxygen' 'python')
 source=("$pkgname-$pkgver.tar.gz::https://github.com/anrieff/libcpuid/archive/v$pkgver.tar.gz")
-sha512sums=('c98f4a95e111da5a4ac54d6f6e25c882f01e6984fcf2f8c1d1c8437cac54ea057233aab05a19c4a1ffa800d54aebf089ca8be6b26b89ff625df382a2984ee462')
+sha512sums=('d725bc82e5aa2db69cea7b3590afbe11d6028cf4802fde8d498b4f1cc6d823e73d71b89a453d81bf996d97b36a71f6c00d0f6e8292b72f2be8a64b5d59c01861')
+b2sums=('3471c11bbe4b0eaac7b00ac20a27556a95991f1b678269ae6f142a0fe2db066ebb756722ae2e76f95158742c93e29a35da6e735226d32b746034acae3ec2a5b7')
 
 build() {
-	cmake -S "$srcdir/$pkgname-$pkgver" -B build -GNinja -DCMAKE_BUILD_TYPE=RelWithDebInfo -DCMAKE_INSTALL_PREFIX=/usr
+	cmake -S "$pkgname-$pkgver" -B build -GNinja \
+    -DCMAKE_BUILD_TYPE=Release \
+    -DCMAKE_INSTALL_PREFIX=/usr
 	cmake --build build
+}
+
+check() {
+  cd build
+  ninja test-old
 }
 
 package() {
 	DESTDIR="$pkgdir" cmake --install build
-	install -Dvm644 "$srcdir/$pkgname-$pkgver/COPYING" "$pkgdir/usr/share/licenses/$pkgname/COPYING"
+
+  # license
+	install -vDm644 -t "$pkgdir/usr/share/licenses/$pkgname" "$pkgname-$pkgver/COPYING"
 }
