--- a/libparserutils/PKGBUILD
+++ b/libparserutils/PKGBUILD
@@ -5,9 +5,9 @@
 
 pkgname=libparserutils
 pkgver=0.2.4
-pkgrel=5
+pkgrel=5.1
 pkgdesc='Library for building efficient parsers'
-arch=(x86_64 powerpc64le powerpc)
+arch=(x86_64 powerpc64le powerpc riscv64)
 url='https://www.netsurf-browser.org/projects/libparserutils/'
 license=(MIT)
 makedepends=('netsurf-buildsystem')
