--- a/libwapcaplet/PKGBUILD
+++ b/libwapcaplet/PKGBUILD
@@ -1,3 +1,4 @@
+# POWER Maintainer: Alexander Baldeck <alex.bldck@gmail.com>
 # Maintainer: Alexander F. Rødseth <xyproto@archlinux.org>
 # Contributor: Brad Fanella <bradfanella@archlinux.us>
 # Contributor: Daniel J Griffiths <ghost1227@archlinux.us>
@@ -6,7 +7,7 @@ pkgname=libwapcaplet
 pkgver=0.4.3
 pkgrel=2
 pkgdesc='String internment library with rapid string comparison'
-arch=(x86_64 powerpc64le powerpc)
+arch=(x86_64 powerpc64le powerpc riscv64)
 url='https://www.netsurf-browser.org/projects/libwapcaplet/'
 license=(MIT)
 makedepends=(netsurf-buildsystem)
