--- a/libcss/PKGBUILD
+++ b/libcss/PKGBUILD
@@ -1,43 +1,47 @@
+# POWER Maintainer: Alexander Baldeck <alex.bldck@gmail.com>
 # Maintainer: Alexander F. Rødseth <xyproto@archlinux.org>
 # Contributor: Brad Fanella <bradfanella@archlinux.us>
 # Contributor: Daniel J Griffiths <ghost1227@archlinux.us>
 
 pkgname=libcss
 pkgver=0.9.1
-pkgrel=2
+pkgrel=3
 pkgdesc='CSS parser and selection engine'
-arch=(x86_64 powerpc64le powerpc)
+arch=(x86_64 powerpc64le powerpc riscv64)
 url='https://www.netsurf-browser.org/projects/libcss/'
 license=(MIT)
 makedepends=(netsurf-buildsystem)
 depends=('libparserutils>=0.2.4' 'libwapcaplet>=0.4.3')
 source=("https://download.netsurf-browser.org/libs/releases/libcss-$pkgver-src.tar.gz")
-sha256sums=('d2dce16e93392e8d6a7209420d47c2d56a3811701a0e81a724fc541c63d3c6dc')
+b2sums=('32206403f77997e6692eed00c9233e6f49f08efc2515901a8bef7590883e44ef320511368fe5a67968102911d849696a4419735c7f6691f0f272fcc3b9a000d8')
 
 prepare() {
   sed -i 's,_BSD_SOURCE,_DEFAULT_SOURCE,' "$pkgname-$pkgver/Makefile"
-}
+
+  pushd ${pkgname}-${pkgver}
+  sed -e '1i#pragma GCC diagnostic ignored "-Wimplicit-fallthrough"' \
+      -i src/parse/parse.c src/select/arena_hash.h
+  sed -e '1i#pragma GCC diagnostic ignored "-Wmaybe-uninitialized"' \
+      -i src/parse/parse.c src/select/computed.c
+  popd
+} 
 
 build() {
-  export CFLAGS="$CFLAGS -w"
-  make -C "$pkgname-$pkgver" \
+  CFLAGS+=' -ffat-lto-objects -w'
+  make -C $pkgname-$pkgver \
+    COMPONENT_TYPE=lib-shared \
     INCLUDEDIR=include \
     LIBDIR=lib \
-    PREFIX=/usr \
-    COMPONENT_TYPE=lib-shared
+    PREFIX=/usr
 }
 
 package() {
-  export CFLAGS="$CFLAGS -w"
-  make -C "$pkgname-$pkgver" \
+  make -C $pkgname-$pkgver \
+    DESTDIR="$pkgdir" \
     INCLUDEDIR=include \
     LIBDIR=lib \
     PREFIX=/usr \
-    DESTDIR="$pkgdir" \
     install
-
-  install -Dm644 "$pkgname-$pkgver/COPYING" \
+  install -Dm644 $pkgname-$pkgver/COPYING \
     "$pkgdir/usr/share/licenses/$pkgname/COPYING"
 }
-
-# vim: ts=2 sw=2 et:
