* update libnsgif to 0.2.1-4

--- a/libnsgif/PKGBUILD
+++ b/libnsgif/PKGBUILD
@@ -1,3 +1,4 @@
+# POWER Maintainer: Alexander Baldeck <alex.bldck@gmail.com>
 # Maintainer: Alexander F. Rødseth <xyproto@archlinux.org>
 # Contributor: Daniel J Griffiths <ghost1227@archlinux.us>
 # Contributor: Paulo Matias <matiasΘarchlinux-br·org>
@@ -6,7 +7,7 @@ pkgname=libnsgif
 pkgver=0.2.1
 pkgrel=4
 pkgdesc='Decoding library for the GIF image file format'
-arch=(x86_64 powerpc64le powerpc)
+arch=(x86_64 powerpc64le powerpc riscv64)
 url='https://www.netsurf-browser.org/projects/libnsgif/'
 license=(MIT)
 makedepends=('netsurf-buildsystem>=1.9')
