* update libnsbmp to 0.1.6-3

--- a/libnsbmp/PKGBUILD
+++ b/libnsbmp/PKGBUILD
@@ -1,12 +1,13 @@
+# POWER Maintainer: Alexander Baldeck <alex.bldck@gmail.com>
 # Maintainer: Alexander F. Rødseth <xyproto@archlinux.org>
 # Contributor: Paulo Matias <matiasΘarchlinux-br·org>
 # Contributor: Daniel J Griffiths <ghost1227@archlinux.us>
 
 pkgname=libnsbmp
 pkgver=0.1.6
-pkgrel=2
+pkgrel=3
 pkgdesc='Decoding library for BMP and ICO image file formats'
-arch=(x86_64 powerpc64le powerpc)
+arch=(x86_64 powerpc64le powerpc riscv64)
 url='https://www.netsurf-browser.org/projects/libnsbmp/'
 license=(MIT)
 makedepends=('netsurf-buildsystem>=1.9')
@@ -14,6 +15,7 @@ source=("https://download.netsurf-browser.org/libs/releases/$pkgname-$pkgver-src
 sha256sums=('79c49365f860ed451bfc4109eddec8de3e9b7ce5a3be069596bd2aa19279324f')
 
 build() {
+  CFLAGS+=' -ffat-lto-objects'
   make -C $pkgname-$pkgver \
     INCLUDEDIR=include \
     LIBDIR=lib PREFIX=/usr \
@@ -29,5 +31,3 @@ package() {
     DESTDIR="$pkgdir"
   install -Dm644 COPYING "$pkgdir/usr/share/licenses/$pkgname/COPYING"
 }
-
-# vim: ts=2 sw=2 et:
