--- a/nsgenbind/PKGBUILD
+++ b/nsgenbind/PKGBUILD
@@ -1,3 +1,4 @@
+# POWER Maintainer: Alexander Baldeck <alex.bldck@gmail.com>
 # Maintainer: Alexander F. Rødseth <xyproto@archlinux.org>
 # Contributor: Marian Buschsieweke <mari.hahn@uni-muenster.de>
 
@@ -5,7 +6,7 @@ pkgname=nsgenbind
 pkgver=0.8
 pkgrel=1
 pkgdesc='NetSurf JavaScript binding generator'
-arch=(x86_64 powerpc64le powerpc)
+arch=(x86_64 powerpc64le powerpc riscv64)
 url='https://git.netsurf-browser.org/nsgenbind.git'
 license=(GPL)
 makedepends=(git netsurf-buildsystem)
