* update netsurf to 3.10-3

--- a/netsurf/PKGBUILD
+++ b/netsurf/PKGBUILD
@@ -1,3 +1,4 @@
+# POWER Maintainer: Alexander Baldeck <alex.bldck@gmail.com>
 # Maintainer: Alexander F. Rødseth <xyproto@archlinux.org>
 # Contributor: Paulo Matias <matiasΘarchlinux-br·org>
 # Contributor: Georgij Kondratjev <smpuj@bk.ru>
@@ -7,7 +8,7 @@ pkgname=netsurf
 pkgver=3.10
 pkgrel=3
 pkgdesc='Lightweight and fast web browser'
-arch=(x86_64 powerpc64le powerpc)
+arch=(x86_64 powerpc64le powerpc riscv64)
 url='https://www.netsurf-browser.org/'
 license=(MIT GPL2)
 depends=(bash curl gtk3 'libhubbub=0.3.7' libjpeg-turbo 'libnsutils=0.1.0'
