* update lib2geom to 1.1-2

--- a/lib2geom/PKGBUILD
+++ b/lib2geom/PKGBUILD
@@ -3,9 +3,9 @@
 
 pkgname=lib2geom
 pkgver=1.1
-pkgrel=1
+pkgrel=2
 pkgdesc='Easy to use 2D geometry library in C++'
-arch=(x86_64 powerpc64le powerpc)
+arch=(x86_64 powerpc64le powerpc riscv64)
 url='https://gitlab.com/inkscape/lib2geom'
 license=('GPL')
 depends=('glib2' 'gsl' 'double-conversion' 'cairo' 'ragel' 'gtest')
