* update scons to 4.3.0-3

--- a/scons/PKGBUILD
+++ b/scons/PKGBUILD
@@ -7,17 +7,18 @@
 
 pkgname=scons
 pkgver=4.3.0
-pkgrel=1
+pkgrel=3
 pkgdesc="Extensible Python-based build utility"
-arch=('any')
+arch=(any)
 url="https://scons.org"
-license=('MIT')
-depends=('python')
-makedepends=('python-setuptools' 'python-sphinx' 'python-sphinx_rtd_theme'
-'rst2pdf')
-checkdepends=('python-pytest')
-source=("$pkgname-$pkgver::git+https://github.com/${pkgname}/${pkgname}.git#tag=${pkgver}")
-sha256sums=('SKIP')
+license=(MIT)
+depends=(python)
+makedepends=(python-setuptools python-sphinx python-sphinx_rtd_theme
+rst2pdf)
+checkdepends=(python-pytest)
+source=("$pkgname-$pkgver.tar.gz::https://github.com/${pkgname}/${pkgname}/archive/${pkgver}.tar.gz")
+sha512sums=('2d91cf3045797c888d24db38d5b44576e56b271a2c4e9d28d7e16026451865f713990ff9e57fa3e0a1c19603c2d6adbbd1ba36d297c9dcce4db4139fcc51cd62')
+b2sums=('a43b509b358d47ee73f7eb714d1239b4fdc33f38483c1a3e72c3a8082242d7bb1a4925958a2648782aa28f4c22a6e018aea8fec1139cf44c59e859f6f902d1d3')
 
 prepare() {
   cd "${pkgname}-${pkgver}"
@@ -39,13 +40,7 @@ check() {
 
 package() {
   cd "${pkgname}-${pkgver}"
-  export PYTHONHASHSEED=0
-  python setup.py install --prefix=/usr \
-                          --skip-build \
-                          --optimize=1 \
-                          --install-data=/usr/share/man/man1/ \
-                          --root="$pkgdir"
+  python setup.py install --optimize=1 --install-data=/usr/share/man/man1/ --root="$pkgdir"
   install -vDm 644 LICENSE -t "${pkgdir}/usr/share/licenses/${pkgname}/"
-  install -vDm 644 {{CHANGES,RELEASE}.txt,README.rst} \
-    -t "${pkgdir}/usr/share/doc/${pkgname}/"
+  install -vDm 644 {{CHANGES,RELEASE}.txt,README.rst} -t "${pkgdir}/usr/share/doc/${pkgname}/"
 }
