* update webkit2gtk to 2.34.4-1.2

--- a/webkit2gtk/PKGBUILD
+++ b/webkit2gtk/PKGBUILD
@@ -5,10 +5,10 @@
 
 pkgname=webkit2gtk
 pkgver=2.34.4
-pkgrel=1
+pkgrel=1.2
 pkgdesc="Web content engine for GTK"
 url="https://webkitgtk.org"
-arch=(x86_64 powerpc64le powerpc)
+arch=(x86_64 powerpc64le powerpc riscv64)
 license=(custom)
 depends=(cairo fontconfig freetype2 libgcrypt glib2 gtk3 harfbuzz harfbuzz-icu
          icu libjpeg libsoup libxml2 zlib libpng sqlite atk libwebp at-spi2-core
@@ -23,6 +23,7 @@ optdepends=('geoclue: Geolocation support'
             'gst-plugins-bad: media decoding'
             'gst-libav: nonfree media decoding')
 source=($url/releases/webkitgtk-$pkgver.tar.xz{,.asc})
+options=(!lto)
 sha256sums=('975f5019199ba7699191835cf75e01a18b94e3bcd0107da7389d4ddcb1aba406'
             'SKIP')
 validpgpkeys=('D7FCF61CF9A2DEAB31D81BD3F3D322D0EC4582C3'  # Carlos Garcia Campos <cgarcia@igalia.com>
@@ -70,7 +71,7 @@ build() {
     -DCMAKE_INSTALL_LIBDIR=lib \
     -DCMAKE_INSTALL_LIBEXECDIR=lib \
     -DCMAKE_SKIP_RPATH=ON \
-    -DENABLE_GTKDOC=ON \
+    -DENABLE_GTKDOC=OFF \
     -DENABLE_MINIBROWSER=ON \
     -DENABLE_BUBBLEWRAP_SANDBOX=ON \
     -DUSE_SOUP2=ON ${EXTRA_CMAKE_FLAGS}
