* update qt5-declarative to 5.15.2+kde+r46-1

--- a/qt5/qt5-declarative/PKGBUILD
+++ b/qt5/qt5-declarative/PKGBUILD
@@ -1,10 +1,11 @@
+# POWER Maintainer: Alexander Baldeck <alex.bldck@gmail.com>
 # Maintainer: Felix Yan <felixonmars@archlinux.org>
 # Contributor: Andrea Scarpino <andrea@archlinux.org>
 
 pkgname=qt5-declarative
-pkgver=5.15.2+kde+r43
+pkgver=5.15.2+kde+r46
 pkgrel=1
-_commit=c691908c54ed7815f513f8511005dbf1f13ad40d
+_commit=29ee9a0e9f02ec74153a2cf09dc63722bc273544
 arch=(x86_64 powerpc64le powerpc riscv64)
 url='https://www.qt.io'
 license=('GPL3' 'LGPL3' 'FDL' 'custom')
@@ -18,6 +19,7 @@ source=(git+https://invent.kde.org/qt/qt/$_pkgfqn#commit=$_commit
         qtdeclarative-5.15.2-riscv-atomic.patch)
 sha256sums=('SKIP'
             '4e5dbd2c0afa081aa6aa7bc70ab205bbdfd86f91e574183f1a7a98372d31d680')
+options=(debug)
 
 pkgver() {
   cd $_pkgfqn
@@ -40,7 +42,7 @@ build() {
     riscv64) CFLAGS+=' -latomic'; CXXFLAGS+=' -latomic'; LDFLAGS+=' -latomic' ;;
   esac
 
-  qmake ../${_pkgfqn}
+  qmake ../${_pkgfqn} CONFIG+=fat-static-lto
   make
 }
 
