--- a/qt5/qt5-wayland/PKGBUILD
+++ b/qt5/qt5-wayland/PKGBUILD
@@ -3,9 +3,9 @@
 # Contributor: Andrea Scarpino <andrea@archlinux.org>
 
 pkgname=qt5-wayland
-pkgver=5.15.2+kde+r44
+pkgver=5.15.2+kde+r52
 pkgrel=1
-_commit=4644d51f4b52e83fc1b4d02b380d80d9d57e76fa
+_commit=d6a6b727832819d118199f7016c2c401663ee370
 arch=(x86_64 powerpc64le powerpc riscv64)
 url='https://www.qt.io'
 license=('GPL3' 'LGPL3' 'FDL' 'custom')
@@ -16,6 +16,7 @@ groups=('qt' 'qt5')
 _pkgfqn=qtwayland
 source=(git+https://invent.kde.org/qt/qt/$_pkgfqn#commit=$_commit)
 sha256sums=('SKIP')
+options=(debug)
 
 pkgver() {
   cd $_pkgfqn
