* update wpewebkit to 2.34.6-1

--- a/wpewebkit/PKGBUILD
+++ b/wpewebkit/PKGBUILD
@@ -2,11 +2,11 @@
 # Maintainer: Jan Alexander Steffens (heftig) <heftig@archlinux.org>
 
 pkgname=wpewebkit
-pkgver=2.34.4
+pkgver=2.34.6
 pkgrel=1
 pkgdesc="Web content engine for embedded devices"
 url="https://wpewebkit.org"
-arch=(x86_64 powerpc64le powerpc) # riscv64)
+arch=(x86_64 powerpc64le powerpc riscv64)
 license=(custom)
 depends=(cairo fontconfig freetype2 glib2 harfbuzz harfbuzz-icu icu libjpeg
          libepoxy libgcrypt libsoup3 libxml2 zlib libpng sqlite libwebp libwpe
@@ -14,41 +14,19 @@ depends=(cairo fontconfig freetype2 glib2 harfbuzz harfbuzz-icu icu libjpeg
          libseccomp xdg-dbus-proxy gstreamer gst-plugins-base-libs libxkbcommon
          wayland wpebackend-fdo)
 makedepends=(cmake ninja gtk-doc python ruby systemd gst-plugins-bad gperf
-             wayland-protocols lld clang)
+             wayland-protocols)
 optdepends=('geoclue: Geolocation support'
             'gst-plugins-good: media decoding'
             'gst-plugins-bad: media decoding'
             'gst-libav: nonfree media decoding')
 options=(!lto)
-source=($url/releases/$pkgname-$pkgver.tar.xz{,.asc} fix-doc.diff)
-sha256sums=('3653ba42dbe22a4e6751b3f7cab8d2ebb2db5b7654c5d135a2f9bedf94778cee'
-            'SKIP'
-            'd8406f972334b22c7bcad4b105f4fe3e1c9f3dda5b396dbf912afa01fc121d8f')
+source=($url/releases/$pkgname-$pkgver.tar.xz{,.asc})
+sha256sums=('301e895c8ed08ce7dccef3192b972f2ccfc2020463244c64069a636f2b05265f'
+            'SKIP')
 validpgpkeys=('D7FCF61CF9A2DEAB31D81BD3F3D322D0EC4582C3'  # Carlos Garcia Campos <cgarcia@igalia.com>
               '5AA3BC334FD7E3369E7C77B291C559DBE4C9123B') # Adrián Pérez de Castro <aperez@igalia.com>
 
-prepare() {
-  cd $pkgname-$pkgver
-  patch -Np1 -i ../fix-doc.diff
-}
-
 build() {
-  case "${CARCH}" in
-    powerpc)
-      LD_FLAGS+=' -Wl,--no-keep-memory'
-      CFLAGS="${CFLAGS/-O?/-Os}"
-      CXXFLAGS="${CXXFLAGS/-O?/-Os}"
-      EXTRA_CMAKE_FLAGS="-DENABLE_JIT=OFF
-                         -DUSE_SYSTEMD=OFF
-                         -DCMAKE_CXX_FLAGS_RELEASE=-DNDEBUG
-                         -DCMAKE_CXX_FLAGS_DEBUG=-DNDEBUG
-                         -DCMAKE_CXX_FLAGS_RELWITHDEBINFO=-DNDEBUG
-                         -DCMAKE_C_FLAGS_RELEASE=-DNDEBUG
-                         -DCMAKE_C_FLAGS_DEBUG=-DNDEBUG
-                         -DCMAKE_C_FLAGS_RELWITHDEBINFO=-DNDEBUG"
-    ;;
-  esac
-
   cmake -S $pkgname-$pkgver -B build -G Ninja \
     -DPORT=WPE \
     -DCMAKE_BUILD_TYPE=Release \
@@ -57,9 +35,7 @@ build() {
     -DCMAKE_INSTALL_LIBEXECDIR=lib \
     -DCMAKE_SKIP_RPATH=ON \
     -DENABLE_GTKDOC=ON \
-    -DENABLE_MINIBROWSER=ON \
-    -DUSE_LD_LLD=ON \
-    -DLTO_MODE=thin
+    -DENABLE_MINIBROWSER=ON
   cmake --build build
 }
 
