* update qrencode to 4.1.1-1.1

--- a/qrencode/PKGBUILD
+++ b/qrencode/PKGBUILD
@@ -4,9 +4,9 @@
 
 pkgname=qrencode
 pkgver=4.1.1
-pkgrel=1
+pkgrel=1.1
 pkgdesc="C library for encoding data in a QR Code symbol."
-arch=( x86_64 powerpc64le powerpc )
+arch=(x86_64 powerpc64le powerpc riscv64)
 depends=('libpng')
 makedepends=(sdl)
 url="https://fukuchi.org/works/qrencode/"
@@ -17,7 +17,7 @@ md5sums=('de7185bcab635a34730e1b73d4efa705')
 build() {
   cd "${srcdir}/$pkgname-$pkgver"
 
-  ./configure --prefix=/usr
+  ./configure --prefix=/usr --build=${CHOST}
 
   make
 }
